--- a/day 001/calculator/style.css
+++ b/day 001/calculator/style.css
@@ -3,6 +3,30 @@
   src: url('./fonts/netflix-sans-core.woff2');
 }
 
+:root {
+  --bg-color: #ffffff;
+  --text-color: gray;
+  --button-bg: #f0f0f0;
+  --body-bg: black;
+  --button-bg1: #e4500c;
+}
+
+body.light {
+  --bg-color: #ffffff;
+  --text-color: gray;
+  --button-bg: #f0f0f0;
+  --body-bg: black;
+  --button-bg1: #e4500c;
+}
+
+body.dark {
+  --bg-color: #262626;
+  --text-color: white;
+  --button-bg: #2d2d2d;
+  --body-bg: white;
+  --button-bg1: #212121;
+}
+
 *{
   margin:0;
   padding: 0;
@@ -12,7 +36,7 @@
 }
 
 body{
-  background-color: black;
+  background-color: var(--body-bg);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,7 +45,7 @@ body{
 }
 
 .container{
-  background-color: white;
+  background-color: var(--bg-color);
   padding: 10px;
   border-radius: 40px;
 }
@@ -29,16 +53,15 @@ body{
 
 .input{
   width: 300px;
-  padding: 30px 30px;
+  padding: 25px 30px;
   font-size: 30px;
   border-radius: 30px;
   text-align: end;
   margin-bottom: 15px;
-  border:none;
+  border:2px solid var(--body-bg);
   outline: none;
-  box-shadow: 0px 1px 4px black;
-  color:black;
-  background-color: rgb(230, 217, 217);
+  color:var(--body-bg);
+  background-color: var(--bg-color);
 }
 
 hr{
@@ -60,20 +83,26 @@ hr{
   border-radius: 50%;
   height: 70px;
   width: 70px;
-  box-shadow: 1px 2px 2px gray;
+  box-shadow: 1px 2px 2px var(--text-color);
   border:none;
+  background-color: var(--button-bg);
 }
 
 .theme{
-  grid-column: span 4;
-  width: 100%;
-  border-radius: 40px;
-  border: none;
-
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 20px;
+  border-radius: 50%;
+  height: 70px;
+  width: 70px;
+  box-shadow: 1px 2px 2px var(--text-color);
+  border:none;
 }
 
+
 #ac-btn{
-  background-color: #e4500c;
+  background-color: var(--button-bg1);
   color:white;
   border:none;
 }
@@ -92,7 +121,7 @@ hr{
 }
 
 #equal{
-  background-color: #e4500c;
+  background-color: var(--button-bg1);
   grid-column: span 2;
   width: 100%;
   border-radius: 40px;
