more fixes for theme

--- a/day 001/calculator/style.css
+++ b/day 001/calculator/style.css
@@ -33,6 +33,7 @@ body.dark {
   box-sizing: border-box;
   color:gray;
   font-family: netflix-sans;
+  transition: background-color 0.8s ease, color 0.4s ease;
 }
 
 body{
@@ -42,6 +43,7 @@ body{
   justify-content: center;
   height: 100vh;
   width: 100vw;
+  transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 .container{
@@ -86,6 +88,7 @@ hr{
   box-shadow: 1px 2px 2px var(--text-color);
   border:none;
   background-color: var(--button-bg);
+  color: var(--text-color);
 }
 
 .theme{
